--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "uglifyify": "^3.0.1"
   },
   "dependencies": {
+    "body-parser": "^1.12.4",
     "compression": "^1.4.3",
     "express": "^4.12.3",
     "jade": "^1.9.2",
     "mocha": "^2.2.1",
+    "mongoose": "^4.0.2",
     "morgan": "^1.5.2",
     "should": "^5.2.0",
     "socket.io": "^1.3.5"
